force-app/main/default/objects/DefaultPlanTemplate__mdt/DefaultPlanTemplate__mdt.object-meta.xml
<CustomObject>
    <description>Can seed plans but actual plans remain objects</description>
    <label>Default Plan Template</label>
    <pluralLabel>DefaultPlanTemplate</pluralLabel>
</CustomObject>