force-app/main/default/objects/DefaultPlanTemplate__mdt/fields/FeatureJSON__c.field-meta.xml
<CustomField>
    <fullName>FeatureJSON__c</fullName>
    <label>Feature JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>