force-app/main/default/objects/DefaultPlanTemplate__mdt/fields/LimitsJSON__c.field-meta.xml
<CustomField>
    <fullName>LimitsJSON__c</fullName>
    <label>Limits JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>