force-app/main/default/objects/DefaultPlanTemplate__mdt/fields/PlanCode__c.field-meta.xml
<CustomField>
    <fullName>PlanCode__c</fullName>
    <label>Plan Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>